[package]
name = "quicommand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.5"
regex = "1.9.1"
signal-hook = "0.3.15"
termion = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
